--- a/papers/publications.bib
+++ b/papers/publications.bib
@@ -39,13 +39,24 @@
 # Niels
 
 @inproceedings{DrostGP2P06,
-	author = {Niels Drost and Rob V. van NieuwPoort and Henri E. Bal},
+	author = {Niels Drost and Rob V. van Nieuwpoort and Henri E. Bal},
 	title = {Simple Locality-Aware Co-allocation in Peer-to-Peer Supercomputing},
 	booktitle = {GP2P: Sixth International Workshop on Global and Peer-2-Peer Computing},
 	year = {2006},
 	month = {May},
 	address = {Singapore},
 	http = {papers/drost_gp2p_2006.pdf}
+}
+
+@InProceedings{hpdc-niels,
+	author =       {Niels Drost and Elth Ogston and Rob V. van Nieuwpoort and Henri E. Bal},
+	title =        {{ARRG: Real-World Gossiping}},
+	booktitle =   {{Proceedings of The 16th IEEE International Symposium on High-Performance Distributed Computing (HPDC)}},
+	year =        {2007},
+	month =       jun,
+	address = {Monterey, CA, USA},
+	note =         {Accepted for Publication},
+	http = {papers/drost_hpdc_2007.pdf}
 }
 
 @mastersthesis{DrostNIO2004,
@@ -185,6 +196,18 @@
 	note = {To be published in LNCS},
 	http = {papers/maassen_lcr_02.pdf},
 }
+
+@InProceedings{hpdc-jason,
+	author =       {Jason Maassen and Henri E. Bal},
+	title =        {{Solving the Connectivity Problems in Grid Computing}},
+	booktitle =   {{Proceedings of The 16th IEEE International Symposium on High-Performance Distributed Computing (HPDC)}},
+	year =        {2007},
+	month =       jun,
+	address = {Monterey, CA, USA},
+	note =         {Accepted for Publication},
+	http = {papers/maassen_hpdc_2007.ps}
+}
+
 
 # Olivier
 
