--- a/publications/satin.bib
+++ b/publications/satin.bib
@@ -15,8 +15,8 @@
 @article{NieuwpoortJSC04,
 	author = {Rob V. van Nieuwpoort and Jason Maassen and Gosia Wrzesinska and Thilo Kielmann and Henri E. Bal},
 	title = {Adaptive Load Balancing for Divide-and-Conquer Grid Applications},
-	journal = {Accepted for publication in Journal of Supercomputing},
-	year = {2004},
+	journal = {Journal of Supercomputing},
+	year = {2006},
 	http = {publications/nieuwpoort_jsc_04.pdf},
 }
 
@@ -68,16 +68,20 @@
 @article{WrzesinskaHPA05,
 	author = {Gosia Wrzesinska and Rob V. van Nieuwport and Jason Maassen and Thilo Kielmann and Henri E. Bal},
 	title = {Fault-tolerant Scheduling of Fine-grained Tasks in Grid Environments},
-	journal = {Accepted for publication in International Journal of High Performance Applications},
-	year = {2005},
+	journal = {International Journal of High Performance Computing Applications},
+	year = {2006},
+	volume = {20},
+	number = {1},
+	pages = {103-114},
 	http = {publications/wrzesinska_hpa_2005.pdf},
 }
 
 @unpublished{WrzesinskaSHARE05,
 	author = {Gosia Wrzesinska and Jason Maassen and Kees Verstoep and Henri E. Bal},
 	title = {Satin++: Divide-and-Share on the Grid},
-	note = {Submitted for publication},
+	booktitle = {Second IEEE International Conference on e-Science and Grid Computing (e-Science'06)},
 	month = {December},
-	year = {2005},
+	year = {2006},
 	http = {publications/wrzesinska_share_05.pdf},
+	address = {Amsterdam, The Netherlands}
 }
