--- a/publications/satin.bib
+++ b/publications/satin.bib
@@ -76,7 +76,7 @@
 	http = {publications/wrzesinska_hpa_2005.pdf},
 }
 
-@unpublished{WrzesinskaSHARE05,
+@inproceedings{WrzesinskaSHARE05,
 	author = {Gosia Wrzesinska and Jason Maassen and Kees Verstoep and Henri E. Bal},
 	title = {Satin++: Divide-and-Share on the Grid},
 	booktitle = {Second IEEE International Conference on e-Science and Grid Computing (e-Science'06)},
