added talks of the tutorial

--- a/talks/satin.bib
+++ b/talks/satin.bib
@@ -1,3 +1,13 @@
+@inproceedings{NiewpoortSatin07,
+        author = {Rob V. van Nieuwpoort},
+        title = {Satin Tutorial},
+        booktitle = {},
+        year = 2007,
+        month = {April},
+        address = {Vrije Universiteit, Amsterdam},
+        http = {talks/ibis-tutorial-2007-satin.pdf},
+}
+
 @inproceedings{NieuwpoortAGRIDM03,
 	author = {Rob V. van Nieuwpoort and Jason Maassen and Rutger Hofman and Thilo Kielmann and Henri E. Bal},
 	title = {Satin: Simple and Efficient Java-based Grid Programming},
