--- a/talks/talks.bib
+++ b/talks/talks.bib
@@ -1,3 +1,33 @@
+@inproceedings{NieuwpoortMPJ07,
+	author = {Rob V. can Nieuwpoort},
+	title = {MPJ Tutorial},
+	booktitle = {},
+	year = 2007,
+	month = {April},
+	address = {Vrije Universiteit, Amsterdam},
+	http = {talks/ibis-tutorial-2007-mpj.pdf},
+}
+
+@inproceedings{NiewpoortSatin07,
+	author = {Rob V. van Nieuwpoort},
+	title = {Satin Tutorial},
+	booktitle = {},
+	year = 2007,
+	month = {April},
+	address = {Vrije Universiteit, Amsterdam},
+	http = {talks/ibis-tutorial-2007-satin.pdf},
+}
+
+@inproceedings{MaassenIbis07,
+	author = {Jason Maassen},
+	title = {Ibis Tutorial and Hands-on Session},
+	booktitle = {},
+	year = 2007,
+	month = {April},
+	address = {Vrije Universiteit, Amsterdam},
+	http = {talks/ibis-tutorial-2007.pdf},
+}
+
 @inproceedings{MaassenIbis05,
 	author = {Jason Maassen and Rob V. van Nieuwpoort},
 	title = {Ibis Tutorial and Hands-on Session},
