--- a/talks/ibis.bib
+++ b/talks/ibis.bib
@@ -1,3 +1,13 @@
+@inproceedings{MaassenIbis07,
+        author = {Jason Maassen},
+        title = {Ibis Tutorial and Hands-on Session},
+        booktitle = {},
+        year = 2007,
+        month = {April},
+        address = {Vrije Universiteit, Amsterdam},
+        http = {talks/ibis-tutorial-2007.pdf},
+}
+
 @inproceedings{MaassenIbis05,
 	author = {Jason Maassen and Rob V. van Nieuwpoort},
 	title = {Ibis Tutorial and Hands-on Session},
