added gosia's papers and thesis

--- a/publications/satin.bib
+++ b/publications/satin.bib
@@ -85,3 +85,23 @@
 	http = {publications/wrzesinska_share_05.pdf},
 	address = {Amsterdam, The Netherlands}
 }
+
+@inproceedings{WrzesinskaPPOP07,
+	author = {Gosia Wrzesinska and Jason Maassen and Henri E. Bal},
+	title = {Self-adaptive Applications on the Grid},
+	booktitle = {ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming (PPoPP'07)},
+	month = {March},
+	year = {2007},
+	http = {publications/wrzesinska_ppop_2007.pdf},
+	address = {San Jose, CA, USA}
+}
+
+@phdthesis{WrzesinskaPHD07,
+	author = {Gosia Wrzesinska},
+	title = {Handling complexity and change in grid computing},
+	school = {Vrije Universiteit},
+	year = 2007,
+	address = {Amsterdam, The Netherlands},
+	month = {May},
+	http = {publications/wrzesinska_thesis.pdf},
+}
