added contact button fixed smartsockets reference

--- a/publications/smartsockets.bib
+++ b/publications/smartsockets.bib
@@ -15,11 +15,10 @@
 
 @InProceedings{hpdc-jason,
 	author =       {Jason Maassen and Henri E. Bal},
-	title =        {{Solving the Connectivity Problems in Grid Computing}},
+	title =        {{Smartsockets:Solving the Connectivity Problems in Grid Computing}},
 	booktitle =   {{Proceedings of The 16th IEEE International Symposium on High-Performance Distributed Computing (HPDC)}},
 	year =        {2007},
 	month =       jun,
 	address = {Monterey, CA, USA},
-	note =         {Accepted for Publication},
 	http = {publications/maassen_hpdc_2007.ps}
 }
