added HPDC2007 paper

--- a/papers/other.bib
+++ b/papers/other.bib
@@ -1,4 +1,4 @@
-# Matthijs
+# Mathijs
 
 @inproceedings{BurgerSC05,
 	author = {Mathijs den Burger and Thilo Kielmann and Henri E. Bal},
@@ -8,6 +8,16 @@
 	month = {November},
 	address = {Seattle, CA, USA},
 	http = {publications/burger_sc_2005.pdf},
+}
+
+@inproceedings{BurgerHPDC07,
+  author = {Mathijs den Burger and Thilo Kielmann},
+  title = {{{MOB: Zero-configuration High-throughput Multicasting for Grid Applications}}},
+  booktitle = {{{Proceedings of The 16th IEEE International Symposium on High-Performance Distributed Computing (HPDC)}}},
+  address = {Monterey, CA, USA},
+  month = {June 27-29},
+  year = {2007},
+  http = {publications/burger_hpdc_2007.pdf},
 }
 
 # Fabrice
