fixed paths to papers

--- a/papers/gmi.bib
+++ b/papers/gmi.bib
@@ -7,7 +7,7 @@
 	year = 2003,
 	address = {Amsterdam, The Netherlands},
 	month = {June},
-	http = {publications/maassen_phd_03.pdf},
+	http = {papers/maassen_phd_03.pdf},
 }
 
 @inproceedings{Maassen04,
@@ -18,5 +18,5 @@
 	month = {March},
 	address = {Washington DC, USA},
 	note = {To be published in LNCS},
-	http = {publications/maassen_lcr_02.pdf},
+	http = {papers/maassen_lcr_02.pdf},
 }
