--- a/papers/smartsockets.bib
+++ b/papers/smartsockets.bib
@@ -8,7 +8,7 @@
 	pages     = {97-106},
 	month	   = {June},
 	address	   = {Honolulu, Hawaii, USA},
-	http	   = {publications/denis_hpdc_2004.pdf},
+	http	   = {papers/denis_hpdc_2004.pdf},
 }
 
 # Jason
@@ -20,5 +20,5 @@
 	year =        {2007},
 	month =       jun,
 	address = {Monterey, CA, USA},
-	http = {publications/maassen_hpdc_2007.ps}
+	http = {papers/maassen_hpdc_2007.ps}
 }
