--- a/papers/zorilla.bib
+++ b/papers/zorilla.bib
@@ -5,7 +5,7 @@
 	year = {2006},
 	month = {May},
 	address = {Singapore},
-	http = {publications/drost_gp2p_2006.pdf}
+	http = {papers/drost_gp2p_2006.pdf}
 }
 
 @InProceedings{hpdc-niels,
@@ -15,5 +15,5 @@
 	year =        {2007},
 	month =       jun,
 	address = {Monterey, CA, USA},
-	http = {publications/drost_hpdc_2007.pdf}
+	http = {papers/drost_hpdc_2007.pdf}
 }
