--- a/papers/ipl.bib
+++ b/papers/ipl.bib
@@ -8,7 +8,7 @@
 	pages = {18--27},
 	month = {November},
 	address = {Seattle, Washington, USA},
-	http = {publications/nieuwpoort_jg_2002.pdf}
+	http = {papers/nieuwpoort_jg_2002.pdf}
 }
 
 @article{NieuwpoortCPE05,
@@ -20,7 +20,7 @@
 	pages = {1079-1107},
 	month = {June},
 	year = {2005},
-	http = {publications/nieuwpoort_cpe_05.pdf}
+	http = {papers/nieuwpoort_cpe_05.pdf}
 }
 
 # Olivier
@@ -32,7 +32,7 @@
 	year = 2005,
 	month = {May},
 	address = {Cardiff, UK},
-	http = {publications/aumage_ccgrid_05.pdf},
+	http = {papers/aumage_ccgrid_05.pdf},
 }
 
 # Niels
@@ -46,6 +46,6 @@
 		year = {2004},
 		address = {Amsterdam, The Netherlands},
 		month = {August},
-		http = {publications/drost_nio_2004.pdf}
+		http = {papers/drost_nio_2004.pdf}
 }
 
