--- a/papers/ipl.bib
+++ b/papers/ipl.bib
@@ -1,4 +1,12 @@
-#Rob
+@inproceedings{DrostHPDC08,
+	author = {Niels Drost and Rob V. van Nieuwpoort and Jason Maassen and Henri E. Bal},
+	title = {Resource Tracking in Parallel and Distributed Applications},
+	booktitle = {Proc. of 17th IEEE International Symposium on High-Performance Distributed Computing (HPDC)},
+	year = {2008},
+	month = {June},
+	address = {Bosten, MA, USA},
+	http = {papers/hpdc137-drost.pdf}
+}
 
 @inproceedings{NieuwpoortJG02,
 	author = {Rob V. van Nieuwpoort and Jason Maassen and Rutger Hofman and Thilo Kielmann and Henri E. Bal},
