Added HPDC2009 stuff

--- a/papers/other.bib
+++ b/papers/other.bib
@@ -59,6 +59,16 @@
 	http = {papers/reeuwijk_europar_2005.pdf},
 }
 
+@inproceedings{ReeuwijkHPDC09,
+  author = {Kees van Reeuwijk},
+  title = {Maestro: a Self-Organizing Peer-to-Peer Dataflow Framework Using Reinforcement Learning},
+  booktitle = {Proceedings of The International ACM Symposium on High Performance Distributed Computing (HPDC)},
+  address = {Munich, Germany},
+  month = {June 11-13},
+  year = {2009},
+  http = {papers/reeuwijk_hpdc_2009.pdf},
+}
+
 # Pieter Adriaans/Ceriel Jacobs
 
 @inproceedings{AdriaansICGI06,
