--- a/talks/other.bib
+++ b/talks/other.bib
@@ -37,4 +37,14 @@
 	address = {Edmonton, Canada},
 	ppt = {talks/edmonton05.ppt}
 }
-	
+
+@inproceedings{ReeuwijkHPDC09,
+        author = {Kees van Reeuwijk},
+        title = {Maestro: a Self-Organizing Peer-to-Peer Dataflow Framework Using Reinforcement Learning},
+	booktitle = {International ACM Symposium on High Performance Distributed Computing (HPDC)},
+	address = {Munich, Germany},
+	month = {June 11-13},
+	year = {2009},
+	http = {talks/hpdc_2009_maestro.pdf},
+}
+
