Moved Henris talk

--- a/talks/other.bib
+++ b/talks/other.bib
@@ -48,3 +48,12 @@
 	http = {talks/hpdc_2009_maestro.pdf},
 }
 
+@inproceedings{BalClade2009,
+	author = {Henri E. Bal},
+	title = {Real-World Distributed Computing with Ibis},
+	booktitle = {HPDC workshop on Challenges of Large Applications in Distributed Environments},
+	address = {Munich, Germany},
+	month = {June},
+	year = {2009},
+	http = {talks/clade09-bal.ppt},
+}
