A couple of additions

--- a/papers/other.bib
+++ b/papers/other.bib
@@ -1,3 +1,15 @@
+# All
+
+@inproceedings{BalIPDPS09_HPGC,
+    author = {Henri .E. Bal and Niels Drost and Roelof Kemp and Jason Maassen and Rob V. van Nieuwpoort and Cees van Reeuwijk and Frank J. Seinstra},
+    title = {Ibis: Real-World Problem Solving using Real-World Grids},
+    booktitle = {Proceedings of the 23rd {IEEE} International Parallel and Distributed Processing Symposium ({IPDPS} 2009), {HPGC} workshop},
+    year = 2009,
+    month = May,
+    address = {Rome, Italy},
+    http = {papers/bal_ipdps_hpgc_2009.pdf},
+}
+
 # Mathijs
 
 @inproceedings{BurgerSC05,
@@ -79,4 +91,26 @@
 	year = {2006},
 	address = {Tokyo, Japan},
 	http = {papers/adriaans_icgi_06.pdf},
+}
+
+# Jason/Kees Verstoep
+@inproceedings{MaassenIPDPS09_HPGC,
+    author = {Jason Maassen and Kees Verstoep and Henri E. Bal and Paola Grosso and Cees de Laat},
+    title = {Assessing the Impact of Future Reconfigurable Optical Networks on Application Performance},
+    booktitle = {Proceedings of the 23rd {IEEE} International Parallel and Distributed Processing Symposium ({IPDPS} 2009), {HPGC} workshop},
+    year = 2009,
+    month = May,
+    address = {Rome, Italy},
+    http = {papers/maassen_ipdps_hpgc_2009.pdf},
+}
+
+# Kees Verstoep
+@inproceedings{VerstoepIPDPS09,
+    author = {Kees Verstoep and Henri E. Bal and Jirf Barnat and Lubos Brim},
+    title = {Efficient Large-Scale Model Checking},
+    booktitle = {Proceedings of the 23rd {IEEE} International Parallel and Distributed Processing Symposium ({IPDPS} 2009)},
+    year = 2009,
+    month = May,
+    address = {Rome, Italy},
+    http = {papers/verstoep_ipdps_2009.pdf},
 }
