--- a/talks/other.bib
+++ b/talks/other.bib
@@ -55,5 +55,5 @@
 	address = {Munich, Germany},
 	month = {June},
 	year = {2009},
-	http = {talks/clade09-bal.ppt},
+	ppt = {talks/clade09-bal.ppt},
 }
