Added a couple of publications

--- a/papers/other.bib
+++ b/papers/other.bib
@@ -81,7 +81,7 @@
   http = {papers/reeuwijk_hpdc_2009.pdf},
 }
 
-# Pieter Adriaans/Ceriel Jacobs
+# Pieter Adriaans/Ceriel Jacobs/Wico Mulder
 
 @inproceedings{AdriaansICGI06,
 	author = {Pieter Adriaans and Ceriel Jacobs},
@@ -91,6 +91,24 @@
 	year = {2006},
 	address = {Tokyo, Japan},
 	http = {papers/adriaans_icgi_06.pdf},
+}
+@inproceedings{MulderBenelearn09,
+        author = {Wico Mulder and Ceriel J.H. Jacobs and Maarten van Someren},
+        title = {Collaborative {DFA} Learning applied to Grid Administration},
+        booktitle = {Benelearn, Annual Belgian-Dutch Conference on Machine Learning},
+        year = {2009},
+        address = {Tilburg, the Netherlands},
+        pages = {38--46},
+}
+
+@inproceedings{MulderGMAC09,
+        author = {Wico Mulder and Ceriel J.H. Jacobs},
+        title = {Grid Management Support by Means of Collaborative Learning Agents},
+        booktitle = {Grids Meet Autonomic Computing, workshop at the 6th {IEEE} International Conference on Autonomic Computing ({ICAC})},
+        year = {2009},
+        address = {Barcelona, Spain},
+        isbn = {978-1-60558-564-2},
+        pages = {43--50},
 }
 
 # Jason/Kees Verstoep
