Added Satin TOPLAS paper

--- a/papers/satin.bib
+++ b/papers/satin.bib
@@ -105,3 +105,18 @@
 	month = {May},
 	http = {papers/wrzesinska_thesis.pdf},
 }
+
+@article{NieuwpoortTOPLAS2010,
+     author = {Rob V. van Nieuwpoort and Gosia Wrzesi\'{n}ska and Ceriel J. H. Jacobs and Henri E. Bal},
+     title = {Satin: A high-level and efficient grid programming model},
+     journal = {ACM Trans. Program. Lang. Syst.},
+     volume = {32},
+     number = {3},
+     year = {2010},
+     issn = {0164-0925},
+     pages = {1--39},
+     doi = {http://doi.acm.org/10.1145/1709093.1709096},
+     publisher = {ACM},
+     address = {New York, NY, USA},
+}
+
