--- a/papers/ipl.bib
+++ b/papers/ipl.bib
@@ -1,3 +1,10 @@
+@article{DrostCaCPE10,
+	author = {Niels Drost and Rob V. van Nieuwpoort and Jason Maassen and Frank Seinstra and Henri E. Bal},
+	title = {{JEL}: Unified Resource Tracking for Parallel and Distributed Applications},
+	journal = {Concurrency and Computation: Practice and Experience},
+	year = {2010},
+}
+
 @inproceedings{DrostHPDC08,
 	author = {Niels Drost and Rob V. van Nieuwpoort and Jason Maassen and Henri E. Bal},
 	title = {Resource Tracking in Parallel and Distributed Applications},
