--- a/papers/satin.bib
+++ b/papers/satin.bib
@@ -1,5 +1,20 @@
 # Rob
 
+@article{NieuwpoortTOPLAS10,
+     author = {Rob V. van Nieuwpoort and Gosia Wrzesi\'{n}ska and Ceriel J.H. Jacobs and Henri E. Bal},
+     title = {Satin: A high-level and efficient grid programming model},
+     journal = {ACM Trans. Program. Lang. Syst.},
+     volume = {32},
+     number = {3},
+     year = {2010},
+     issn = {0164-0925},
+     pages = {1--39},
+     doi = {http://doi.acm.org/10.1145/1709093.1709096},
+     publisher = {ACM},
+     address = {New York, NY, USA},
+}
+
+
 @article{NieuwpoortSCPE05,
 	author = {Rob V. van Nieuwpoort and Jason Maassen and Thilo Kielmann and Henri E. Bal},
 	title = {Satin: Simple and Efficient {J}ava-based Grid Programming},
@@ -13,7 +28,7 @@
 }
 
 @article{NieuwpoortJSC04,
-	author = {Rob V. van Nieuwpoort and Jason Maassen and Gosia Wrzesinska and Thilo Kielmann and Henri E. Bal},
+	author = {Rob V. van Nieuwpoort and Jason Maassen and Gosia Wrzesi\'{n}ska and Thilo Kielmann and Henri E. Bal},
 	title = {Adaptive Load Balancing for Divide-and-Conquer Grid Applications},
 	journal = {Journal of Supercomputing},
 	year = {2006},
@@ -43,7 +58,7 @@
 # Maik
 
 @mastersthesis{NijhuisBarnes2004,
-	author = {M.H.J. Nijhuis},
+	author = {Maik H. J. Nijhuis},
 	title = {Divide-and-Conquer Barnes-Hut Implementations},
 	school = {Faculty of Sciences, Division of Computer Science, Vrije Universiteit},
 	year = {2004},
@@ -56,7 +71,7 @@
 # Gosia
 
 @inproceedings{WrzesinskaIPDPS05,
-	author    = {Gosia Wrzesinska and Rob van Nieuwpoort and Jason Maassen and Henri E. Bal},
+	author    = {Gosia Wrzesi\'{n}ska and Rob V. van Nieuwpoort and Jason Maassen and Henri E. Bal},
 	title     = {Fault-Tolerance, Malleability and Migration for Divide-and-Conquer Applications on the Grid.},
 	booktitle = {Proc. of 19th International Parallel and Distributed Processing Symposium},
 	year      = {2005},
@@ -66,7 +81,7 @@
 }
 
 @article{WrzesinskaHPA05,
-	author = {Gosia Wrzesinska and Rob V. van Nieuwport and Jason Maassen and Thilo Kielmann and Henri E. Bal},
+	author = {Gosia Wrzesi\'{n}ska and Rob V. van Nieuwport and Jason Maassen and Thilo Kielmann and Henri E. Bal},
 	title = {Fault-tolerant Scheduling of Fine-grained Tasks in Grid Environments},
 	journal = {International Journal of High Performance Computing Applications},
 	year = {2006},
@@ -77,7 +92,7 @@
 }
 
 @inproceedings{WrzesinskaSHARE05,
-	author = {Gosia Wrzesinska and Jason Maassen and Kees Verstoep and Henri E. Bal},
+	author = {Gosia Wrzesi\'{n}ska and Jason Maassen and Kees Verstoep and Henri E. Bal},
 	title = {Satin++: Divide-and-Share on the Grid},
 	booktitle = {Second IEEE International Conference on e-Science and Grid Computing (e-Science'06)},
 	month = {December},
@@ -87,7 +102,7 @@
 }
 
 @inproceedings{WrzesinskaPPOP07,
-	author = {Gosia Wrzesinska and Jason Maassen and Henri E. Bal},
+	author = {Gosia Wrzesi\'{n}ska and Jason Maassen and Henri E. Bal},
 	title = {Self-adaptive Applications on the Grid},
 	booktitle = {ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming (PPoPP'07)},
 	month = {March},
@@ -97,26 +112,12 @@
 }
 
 @phdthesis{WrzesinskaPHD07,
-	author = {Gosia Wrzesinska},
+	author = {Gosia Wrzesi\'{n}ska},
 	title = {Handling complexity and change in grid computing},
 	school = {Vrije Universiteit},
 	year = 2007,
 	address = {Amsterdam, The Netherlands},
 	month = {May},
 	http = {papers/wrzesinska_thesis.pdf},
-}
-
-@article{NieuwpoortTOPLAS2010,
-     author = {Rob V. van Nieuwpoort and Gosia Wrzesi\'{n}ska and Ceriel J. H. Jacobs and Henri E. Bal},
-     title = {Satin: A high-level and efficient grid programming model},
-     journal = {ACM Trans. Program. Lang. Syst.},
-     volume = {32},
-     number = {3},
-     year = {2010},
-     issn = {0164-0925},
-     pages = {1--39},
-     doi = {http://doi.acm.org/10.1145/1709093.1709096},
-     publisher = {ACM},
-     address = {New York, NY, USA},
 }
 
