--- a/papers/satin.bib
+++ b/papers/satin.bib
@@ -9,7 +9,7 @@
      year = {2010},
      issn = {0164-0925},
      pages = {1--39},
-     doi = {http://doi.acm.org/10.1145/1709093.1709096},
+     doi = {10.1145/1709093.1709096},
      publisher = {ACM},
      address = {New York, NY, USA},
 }
