added cpe papers

--- a/papers/zorilla.bib
+++ b/papers/zorilla.bib
@@ -1,3 +1,25 @@
+@article{DrostCPE11b,
+ author = {Drost, Niels and van Nieuwpoort, Rob V. and Maassen, Jason and Seinstra, Frank J. and Bal, Henri E.},
+ title = {Zorilla: a peer-to-peer middleware for real-world distributed systems},
+ journal = {Concurr. Comput. : Pract. Exper.},
+ issue_date = {September 2011},
+ volume = {23},
+ issue = {13},
+ month = {September},
+ year = {2011},
+ issn = {1532-0626},
+ pages = {1506--1521},
+ numpages = {16},
+ url = {http://dx.doi.org/10.1002/cpe.1713},
+ doi = {http://dx.doi.org/10.1002/cpe.1713},
+ acmid = {2030263},
+ publisher = {John Wiley and Sons Ltd.},
+ address = {Chichester, UK},
+ keywords = {distributed computing, middleware, peer-to-peer, virtualization},
+ http = {papers/drost_cpe_2011b.pdf}
+} 
+
+
 @inproceedings{DrostGP2P06,
 	author = {Niels Drost and Rob V. van Nieuwpoort and Henri E. Bal},
 	title = {Simple Locality-Aware Co-allocation in Peer-to-Peer Supercomputing},
