--- a/papers/ipl.bib
+++ b/papers/ipl.bib
@@ -1,9 +1,23 @@
-@article{DrostCaCPE10,
-	author = {Niels Drost and Rob V. van Nieuwpoort and Jason Maassen and Frank Seinstra and Henri E. Bal},
-	title = {{JEL}: Unified Resource Tracking for Parallel and Distributed Applications},
-	journal = {Concurrency and Computation: Practice and Experience},
-	year = {2010},
-}
+@article{DrostCPE11a,
+ author = {Drost, Niels and van Nieuwpoort, Rob V. and Maassen, Jason and Seinstra, Frank and Bal, Henri E.},
+ title = {JEL: unified resource tracking for parallel and distributed applications},
+ journal = {Concurr. Comput. : Pract. Exper.},
+ issue_date = {January 2011},
+ volume = {23},
+ issue = {1},
+ month = {January},
+ year = {2011},
+ issn = {1532-0626},
+ pages = {17--37},
+ numpages = {21},
+ url = {http://dx.doi.org/10.1002/cpe.1592},
+ doi = {http://dx.doi.org/10.1002/cpe.1592},
+ acmid = {1944435},
+ publisher = {John Wiley and Sons Ltd.},
+ address = {Chichester, UK},
+ keywords = {parallel applications, programming models, resource tracking},
+ http = {papers/drost_cpe_2011a.pdf}
+} 
 
 @inproceedings{DrostHPDC08,
 	author = {Niels Drost and Rob V. van Nieuwpoort and Jason Maassen and Henri E. Bal},
