--- a/papers/satin.bib
+++ b/papers/satin.bib
@@ -1,3 +1,34 @@
+# Pieter
+
+@article{Hijma201275,
+    title = "Generating synchronization statements in divide-and-conquer programs",
+    journal = "Parallel Computing",
+    volume = "38",
+    number = "1–2",
+    pages = "75 - 89",
+    year = "2012",
+    note = "<ce:title>Extensions for Next-Generation Parallel Programming Models</ce:title>",
+    issn = "0167-8191",
+    doi = "10.1016/j.parco.2011.10.007",
+    url = "http://www.sciencedirect.com/science/article/pii/S0167819111001384",
+    author = "Pieter Hijma and Rob V. van Nieuwpoort and Ceriel J.H. Jacobs and Henri E. Bal",
+    keywords = "Synchronization",
+    keywords = "Divide-and-conquer",
+    keywords = "Java",
+    keywords = "Satin",
+    keywords = "Static analysis"
+}
+
+@inproceedings{HijmaHIPS2011,
+    author = {Pieter Hijma and Rob V van Nieuwpoort and Ceriel Jacobs and Henri Bal},
+    title = {Automatically Inserting Synchronization Statements in Divide-and-Conquer Programs},
+    booktitle = {16th International Workshop on High-Level Parallel Programming Models and Supportive Environments {(HIPS 2011)}, held in conjunction with {IPDPS-2011}},
+    year = {2011},
+    month = {May},
+    address = {Anchorage, USA},
+}
+
+
 # Rob
 
 @article{NieuwpoortTOPLAS10,
